syntax/tests/parsing/errors/expressions/jsx.res
let x = <di-v />
let x = <Unclosed >;
let x = <Foo.Bar></Free.Will>;
let x = <Foo.Bar.Baz></Foo.Bar.Boo>
let x = <Foo.bar> </Foo.baz>
let x = <Foo.bar.baz />
